ui: fix modal collapse colors

--- a/js/packages/web/src/views/styles.less
+++ b/js/packages/web/src/views/styles.less
@@ -443,6 +443,14 @@ h2 {
   }
 }
 
+.ant-modal-body > {
+  .ant-collapse, .ant-collapse-item > {
+    .ant-collapse-header, .ant-collapse-content-box {
+      background-color: #2b2b2b;
+    }
+  }
+}
+
 .ant-collapse, .ant-collapse-header, .ant-collapse-content-box {
   background-color: black;
   color: white !important; // specifity of collapse > item > header
